--- a/.github/workflows/ci-golang-tests.yml
+++ b/.github/workflows/ci-golang-tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   golang-tests:
     name: test
-    runs-on: warp-ubuntu-latest-x64-4x
+    runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
     steps:
       - uses: actions/checkout@v4
