--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,3 +19,9 @@ updates:
       interval: "weekly"
       day: "wednesday"
       time: "16:00"
+    groups:
+      actions:
+        update-types:
+          - "patch"
+          - "minor"
+          - "major"
